# modern-cpp-lib

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
apps/: CMakeLists.txt  app.cpp
include/modern_cpp_lib/: lib.hpp
src/: CMakeLists.txt  lib.cpp
tests/: CMakeLists.txt  testlib.cpp
